# dolfinx.sycl

./: CMakeLists.txt  README.md  algorithms.hpp  assemble.hpp  assemble_impl.cpp  assemble_impl.hpp  dolfinx_sycl.hpp  la.cpp  la.hpp  main.cpp  memory.cpp  memory.hpp  poisson.c  poisson.h  poisson.ufl  solve.cpp  solve.hpp  timing.cpp  timing.hpp  utils.hpp
benchmark/: CMakeLists.txt  main.cpp  poisson.ufl
cmake/Modules/: FindComputeCpp.cmake
docker/: Dockerfile
